Fix nav vertical spacing

--- a/content/static/css/screen.css
+++ b/content/static/css/screen.css
@@ -498,8 +498,8 @@ body:after {
     margin-right: 0;
     line-height: 56px;
     line-height: 2.66667rem;
-    margin-bottom: 24px;
-    margin-bottom: 1.14286rem;
+    margin-bottom: 16px;
+    margin-bottom: 0.7619rem;
     text-align: right;
   }
 
